examples/test/testpolicy18756.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18756
  namespace: namespace291
spec:
  podSelector:
    matchLabels:
      key25: value9
      key42: value7
      key43: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value3
          key34: value25
          key25: value35
      podSelector:
        matchLabels:
          key20: value46
          key24: value33
          key31: value45
